--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-API_ID =  # Get it by creating an app on https://my.telegram.org
-API_HASH = "" # Get it by creating an app on https://my.telegram.org
-BOT_TOKEN = "" # Get it by creating a bot on https://t.me/BotFather
-SUDO_USERS = "" # List of sudo user's id, separated by space.
+API_ID = "1362544" # Get it by creating an app on https://my.telegram.org
+API_HASH = "afa5a5312843deb04d54550398a27e08" # Get it by creating an app on https://my.telegram.org
+BOT_TOKEN = "1942318253:AAERByDz2pnM3qh_KXqIOQMfH7P-UpjrYOc" # Get it by creating a bot on https://t.me/BotFather
+SUDO_USERS = "940252232" # List of sudo user's id, separated by space.
 DOWNLOAD_DIR = "downloads/" # Download directory where to download files. Must ends with forward slash > / <
